# scylladb-driver

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  package.json  pnpm-lock.yaml  post_build.js  rust-toolchain.toml  rustfmt.toml  simple.ts  tsconfig.json
.githooks/: commit-msg
.github/workflows/: CI.yml
__test__/: uuid.spec.mjs
__test__/integration/: batch_paging_lwt.spec.mjs  connect.spec.mjs  observability.spec.mjs  prepared.spec.mjs  profiles.spec.mjs  session.spec.mjs  types_schema.spec.mjs
docker/: docker-compose.yml
driver_api/: create-and-select.ts  main.ts
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: pack-prepare.mjs  publish-preview.sh  verify-pack.mjs
src/: error.rs  lib.rs
src/cluster/: cluster_config.rs  mod.rs  scylla_cluster.rs
src/observability/: logging.rs  metrics.rs  mod.rs  tracing_info.rs
src/policies/: execution_profile.rs  mod.rs
src/schema/: metadata.rs
src/session/: execute_options.rs  mod.rs  query_result.rs  scylla_session.rs
src/statement/: batch.rs  mod.rs  prepared.rs
src/types/: cql_json.rs  mod.rs  uuid.rs
ts/: index.ts
