[package]
edition = "2021"
name = "scylladb-driver"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "2.12.2"
scylla = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
